# SimpleMovingAverage

./: CMakeLists.txt  Perfomance.xlsx
src/: simpleMovingAverage.h  simpleMovingAverage_test.cpp
