cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
project(simpleMovingAverage LANGUAGES CXX)
find_package(OpenMP REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O2")
add_executable(result src/simpleMovingAverage_test.cpp src/simpleMovingAverage.h)
target_link_libraries(result PRIVATE OpenMP::OpenMP_CXX)